--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -113,6 +113,7 @@ CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_BOOST=y
 CONFIG_POWERSUSPEND=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_FB_MSM_MDSS=y
 
 #
 # IO Schedulers
