--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -4942,4 +4942,10 @@ config PVS_LEVEL_INTERFACE
 	help
 	 Allow PVS level to be shown in Boeffla-Config app
 
+config CHARGE_LEVEL
+	bool "Charge level interface"
+	default y
+	help
+	  Allows configuration of ac, usb and wireless charging levels	
+
 endif
