--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -112,6 +112,7 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 CONFIG_CPU_BOOST=y
 CONFIG_POWERSUSPEND=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 
 #
 # IO Schedulers
