--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -114,6 +114,7 @@ CONFIG_CPU_BOOST=y
 CONFIG_POWERSUSPEND=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_FB_MSM_MDSS=y
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # IO Schedulers
