--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -130,6 +130,7 @@ CONFIG_POWERSUSPEND=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_TOUCHBOOST_CONTROL=y
 
 #
 # IO Schedulers
