--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -131,6 +131,15 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_TOUCHBOOST_CONTROL=y
+CONFIG_PM_DEVFREQ=y
+CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
+CONFIG_DEVFREQ_GOV_PERFORMANCE=y
+CONFIG_DEVFREQ_GOV_POWERSAVE=y
+CONFIG_DEVFREQ_GOV_USERSPACE=y
+CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
+CONFIG_DEVFREQ_GOV_MSM_CPUFREQ=y
+CONFIG_DEVFREQ_GOV_MSM_CPUBW_HWMON=y
+CONFIG_DEVFREQ_GOV_CONSERVATIVE=y
 
 #
 # IO Schedulers
