--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -131,6 +131,7 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_DYNAMIC_FSYNC=y
 CONFIG_TOUCHBOOST_CONTROL=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_PM_DEVFREQ=y
 CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
